# ps

./: .gitignore  Pipfile  package-lock.json  package.json  practice.cpp  practice.py  pyproject.toml
2021MOBIS/: problem1.py  problem2.py
2022SKTTworX/: 2번.py  3번.py  problem4.cpp
BOJ/: 1008.cpp  12865.cpp  1405.py  14502.cpp  14502.py  15904.cpp  15904.cs  15904.js  15904.py  1697.java  1912.cpp  1912.cs  2225.cpp  2447.cpp  2493.cpp  4375.py  7662.cpp  8983.cs
GoogleCodeJam2022/qualification_round/: codejam2022_qual_A_punchedCard.cpp  codejam2022_qual_B_3DPrinting.cpp  codejam2022_qual_C_di.cpp  codejam2022_qual_C_di_small.cpp
GoogleCodeJam2022/round_1A/: A.py
codeforces/: 1682_#793_div2_A.cpp  1682_#793_div2_A.py  1682_#793_div2_B.cpp  1778_#848_div2_A.py
leetcode/: 1_twosum.cpp  2441.cpp  2441.py  966.py
programmers/: 150369.py  1844.cpp  42586.cpp  43238.py
snippets/: binarysearch.py  dijkstra.py  doublelinkedlist.py  heap.py
templates/: codeforces.cpp  codeforces.py  codejam.cpp  codejam.py  leetcode.cpp  leetcode.py
