[tool.poetry]
name = "ps"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
pandas = "^1.5.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^22.8.0"
pytest = "^7.1.3"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
